# silero-vad

my-info/: get_timestamp.py  split_wav_based_on_vad.py
my-info/cpp_project/: CMakeLists.txt  build_ios_xcframework.sh  c_wrapper_impl.cpp
my-info/cpp_project/WQVad.xcframework/: Info.plist
my-info/cpp_project/WQVad.xcframework/ios-arm64/Headers/: WQVad.h
my-info/cpp_project/WQVad.xcframework/ios-arm64/WQVad.framework/: Info.plist
my-info/cpp_project/WQVad.xcframework/ios-arm64/WQVad.framework/Modules/: module.modulemap
my-info/cpp_project/include/wqvad/: types.h  wqvad.h
my-info/cpp_project/src/: wqvad.cpp
my-info/cpp_project/src/internal/: wqvad_impl.h
my-info/cpp_project/xcframework/ios-arm64/WQVad.framework/: Info.plist
my-info/cpp_project/xcframework/ios-arm64/WQVad.framework/Modules/: module.modulemap
